# Electronic-Cookbook

./: Cargo.toml
.github/workflows/: node.js.yml
client/: package-lock.json  package.json
client/src/: App.css  App.test.tsx  App.tsx  Error.tsx  Loading.tsx  RouteNotFound.tsx  client.ts  hooks.ts  index.css
client/src/components/: Morselbar.tsx  backendTypes.ts
client/src/components/admin/: Admin.tsx
client/src/components/appbar/: appbar.tsx
client/src/components/home/: Home.css  Home.tsx
client/src/components/pricing/: Pricing.tsx
client/src/components/recipes/: Ingredients.tsx  PreparationSteps.tsx  RecipeDetails.tsx  RecipeDialog.tsx  Recipes.tsx  RemoveRecipeDialog.tsx
client/src/components/table/: table.tsx
src/: main.rs  recipes.rs  redis.rs  state_builder.rs  users.rs
src/clients/: mod.rs  user_client.rs  utils.rs
