[package]
name = "LearningProject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6.4"
axum-macros = "0.3"
parking_lot = "0.12"
r2d2 = "0.8"
redis = { version = "0.22", features = ["r2d2"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.25.0", features = ["full"] }
derive-new = "0.5"
tower-http = { version = "0.1", features = ["full"] }

uuid = { version = "1", features = ["v4", "serde"] }

